# transcribe

./: .env.example  .gitignore  README.md  pyproject.toml
src/transcribe/: cli.py  config.py  devices.py  markdown.py  meeting.py  notes.py  recorder.py  system.py  transcriber.py
