[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcribe"
version = "0.1.0"
description = "Local-first Linux meeting recorder and transcription tool powered by faster-whisper"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "Vibhav" }
]
dependencies = [
  "faster-whisper>=1.1.1",
  "numpy>=1.26.0,<3",
  "openai>=1.35.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.1",
  "typer>=0.12.3",
  "websocket-client>=1.8.0",
]

[project.scripts]
transcribe = "transcribe.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
